bug squash

--- a/app/assets/stylesheets/answers.css
+++ b/app/assets/stylesheets/answers.css
@@ -13,7 +13,7 @@
   font-size: 18px;
   border-radius: 0;
   line-height: 22px;
-  background-color: ##1d7f91;
+  background-color: #1d7f91;
   padding: 13px 13px 13px 54px;
   margin-bottom: 10px;
   width:100%;
